kubernetes/apps/infrastructure/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-internal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.devpi.de"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.devpi.de"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: wildcart-cert-internal
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: web-internal
      namespace: kube-system
      sectionName: "http"
  hostnames:
    - "*.devpi.de"
  rules:
  - filters:
      - requestRedirect:
          scheme: https
          statusCode: 301
        type: RequestRedirect
    matches:
      - path:
          type: PathPrefix
          value: /
